option for sharding strategy and move webhook parsing to ParsingUtil